# SkillGap

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  main.py  repository.py  schemas.py
app/data/: data_analyst.json  data_engineer.json  devops_engineer.json  frontend_developer.json  ios_developer.json  java_backend_developer.json  ml_engineer.json  product_manager.json  python_web_developer.json  qa_engineer.json  ui_ux_designer.json
app/services/: assessment.py  catalog.py  llm_service.py  vacancy_matching.py  vacancy_source.py
bot/: client.py  config.py  formatters.py  keyboards.py  main.py  states.py
tests/: test_assessment_engine.py  test_llm_service.py
